force-app/main/default/objects/HRCFSL_Service_Report_Event__e/HRCFSL_Service_Report_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event used for alerting mulesoft that a new service report needs to be emailed.</description>
    <label>Service Report Event</label>
    <pluralLabel>Service Report Events</pluralLabel>
</CustomObject>