force-app/main/default/objects/HRCFSL_Service_Report_Event__e/fields/HRCFSL_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>