force-app/main/default/objects/HRCFSL_Service_Report_Event__e/fields/HRCFSL_File_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>