force-app/main/default/objects/HRCFSL_Service_Report_Event__e/fields/HRCFSL_From_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_From_Address__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>