force-app/main/default/objects/HRCFSL_Service_Report_Event__e/fields/HRCFSL_Service_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Service_Report_Id__c</fullName>
    <label>Service Report Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>