force-app/main/default/objects/HRCFSL_Service_Report_Event__e/fields/HRCFSL_To_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_To_Address__c</fullName>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>